kustomizations/streaming/whisparr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
spec:
  selector:
    app: whisparr
  ports:
  - name: http
    port: 6969
    targetPort: 6969
